--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -31,4 +31,9 @@ jobs:
           git config --global user.name 'GitHub Action'
           git config --global user.email 'action@github.com'
           git add data.csv
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Auto-update daily data" && git push)
+          if ! git diff --staged --quiet; then
+            git commit -m "Auto-update daily data"
+            git push
+          else
+            echo "No changes to commit"
+          fi
